--- a/src/03-selectors.html
+++ b/src/03-selectors.html
@@ -11,6 +11,7 @@
         </style>
     </head>
     <body>
+        <a href="https://api.jquery.com/find/">Related link</a>
         <div id="container">
             <h1>h1</h1>
             <h2>h2-1</h2>
